--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 CHANGELOG:
 
+20 mar 2007 (minor RELEASE 0.51 for windows)
+
 20 mar 2007
 	fixed: 420520: problem with chronopic timeout in mono1.2.3
 	minor gui improvements
